--- a/0x02-CSS_advanced/styles/10-style.css
+++ b/0x02-CSS_advanced/styles/10-style.css
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5, h6{
     display: none;
 }
 .section-header{
-    justify-content: var(--section-header-align);
+    text-align: var(--section-header-align);
 }
 .card-category, .section-tagline {
     color: var(--color-primary);
