--- a/0x02-CSS_advanced/styles/13-style.css
+++ b/0x02-CSS_advanced/styles/13-style.css
@@ -11,8 +11,17 @@ body{
 body, a {
     color: var(--text-color);
 }
-a {
+a:link{
     text-decoration: none;
+}
+a:visited {
+    font-style: italic;
+}
+a:hover {
+    text-decoration: underline;
+}
+a:active {
+    background-color: var(--color-light-grey);
 }
 h1, h2, h3, h4, h5, h6{
     font-family: var(--font-family-title);
@@ -23,6 +32,13 @@ h1, h2, h3, h4, h5, h6{
 }
 .section-header{
     text-align: var(--section-header-align);
+}
+.section-title{
+    font-family: var(--font-family-title);
+    font-size: var(--font-size-xx-large);
+    font-weight: var(--font-weight-bold);
+    margin: var(--section-title-margin);
+    color: var(--section-title-color);
 }
 .card-category, .section-tagline {
     color: var(--color-primary);
@@ -53,5 +69,7 @@ h1, h2, h3, h4, h5, h6{
     --line-height-base: 1.5;
     --line-height-big: 1.8;
     --section-header-align: center;
-    --section-tagline-transform:uppercase;
+    --section-tagline-transform: uppercase;
+    --section-title-margin: 0;
+    --section-title-color: var(--color-black);
 }
