button class debug

--- a/0x02-CSS_advanced/styles/25-style.css
+++ b/0x02-CSS_advanced/styles/25-style.css
@@ -379,7 +379,7 @@ a:hover {
 a:active {
     background-color: var(--color-light-grey);
 }
-button {
+.button {
     display: var(--button-display);
     padding: var(--button-padding);
     border:var(--button-border);
@@ -387,7 +387,7 @@ button {
     color: var(--button-color);
     text-decoration: var(--button-text-decoration);
 }
-button:hover {
+.button:hover {
     color: var(--button-hover-color);
     text-decoration: var(--button-hover-text-decoration);
     background-color: var(--button-hover-background);
@@ -552,7 +552,7 @@ ul.row {
     --text-color: var(--color-white);
     --section-title-color: var(--color-white);
     background-color: var(--color-black);
-    --button-color:var(--color-white);
+    --button-color: var(--color-white);
 }
 .card-services .card-title {
     margin: 0;
